--- a/CQRS-Mediatr/CQRS_Mediatr.csproj
+++ b/CQRS-Mediatr/CQRS_Mediatr.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
+    <AssemblyName>CQRS_Mediatr</AssemblyName>
+    <RootNamespace>CQRS_Mediatr</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -9,6 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="5.1.0" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="5.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
